fixed verticle text alignment and work together hitbox

--- a/css/main.css
+++ b/css/main.css
@@ -414,7 +414,7 @@ hr {
   display: inline;
   float: right;
   margin-right: 10px;
-  margin-top: 35px;
+  margin-top: 140px;
 }
 
 #fatcat {
@@ -429,7 +429,10 @@ hr {
 }
 
 #worktogether {
+  display: inline-block;
   margin-top: 125px;
+  width: 300px;
+  height: 40px;
 }
 
 
